--- a/static/scss/sections/_creators.scss
+++ b/static/scss/sections/_creators.scss
@@ -3,9 +3,16 @@
     font-weight: bold;
     font-size: 38px;
     padding: 20px;
+    padding-left: 0;
+}
+.creators-nav {
+  background: white;
+}
+.creators-nav>div {
+  max-width: 80%;
+  margin: auto;
 }
 .creators {
-
   max-width: 1200px;
   margin: auto;
 }
@@ -117,4 +124,70 @@
   background-size:cover;
   background-repeat:no-repeat;
   background-origin:center;
+}
+
+
+/****** New project *****/
+#creators_new_project {
+  background: black;
+}
+
+.creators_new_project {
+  max-width: 80%;
+  margin: auto;
+  padding-top: 2%;
+  h1 {
+    color: white;
+    font-family: 'Cooper Hewitt', 'Roboto', sans-serif;
+    font-size: 45px;
+  }
+  color: white;
+  font-size: 18px;
+
+  input {
+    border: 1.5px solid white;
+    background: transparent;
+    width: 100%;
+    padding: 2px 6px;
+  }
+  input:active, input:focus {
+    background: white;
+    outline: none;
+    color: black;
+  }
+  form {
+    width: 46%;
+  }
+  .input-half {
+    width: 45%;
+  }
+  ::placeholder {
+    color: white;
+    font-size: 14px;
+  }
+  button {
+    margin-top: 2%;
+    color: black;
+    background: white;
+    font-family: 'Cooper Hewitt', 'Roboto', sans-serif;
+    font-size: 15px;
+    border: none;
+    padding: 2% 4% 1.2% 5%;
+  }
+  textarea {
+    width: 100%;
+    background: black;
+    color: white;
+    padding: 2px 6px;
+    border: 1.5px solid white;
+    font-size: 16px;
+  }
+  textarea:focus, textarea:active {
+    outline: none;
+    background: white;
+    color: black;
+  }
+  textarea::placeholder {
+    font-style: italic;
+  }
 }
