fixed mobile for raw

--- a/static/scss/sections/_rawexpo.scss
+++ b/static/scss/sections/_rawexpo.scss
@@ -202,6 +202,12 @@
 @media (max-width: 650px) {
 	img {
 		width: 100% !important;
+		border-left: 10px white solid;
+	}
+
+	#instructions2 {
+		margin-top: 20% !important;
+
 	}
 
 }
