--- a/creators/templates/sections/creators_index.html
+++ b/creators/templates/sections/creators_index.html
@@ -1,71 +1,44 @@
+{% extends "components/creators_base.html" %}
 {% load static %}
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-	<script src="{% static 'js/index.js' %}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
- 	<meta charset="utf-8">
- 	<title>Creators of Cornell</title>
- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="{% static 'imgs/favicon.ico' %}" >
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block resources %}
-    {% endblock %}
-</head>
-<body onresize="ImageGrid(options)" onLoad="ImageGrid(options)">
-    <!-- <div id="hamburger"><i data-feather="menu"></i></div> -->
-    <div class="creators-nav">
-			<div><h1>Creators of Cornell</h1></div>
-		</div>
-    <div class="creators">
-		{% block content %}
-		
-		<div class="creators-content">
-			<div class="flex">
-			<div class="placeholder"></div>
-			<div class="creators_preview">
-				<div class="creator_preview_name">
-					<h1>Caley Drooff</h1>
+
+{% block resources %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+{% endblock %}
+
+{% block content %}
+<div class="creators-content">
+	<div class="flex">
+		<div class="placeholder"></div>
+		<div class="creators_preview">
+			<div class="creator_preview_name">
+				<h1>Caley Drooff</h1>
+			</div>
+			<div class="creator_preview_proj_title">
+				<div>
+						<h2>The Water Project</h2>
+						<p>The project shown is from my graduate thesis on  re-designing water and how water is actually wet.</p>
 				</div>
-				<div class="creator_preview_proj_title">
+			</div>
+			<div class="creator_preview_buttons">
+				<div class="preview_back_btn">
 					<div>
-							<h2>The Water Project</h2>
-							<p>The project shown is from my graduate thesis on  re-designing water and how water is actually wet.</p>
+						<h2>Go Back</h2>
+						<img src="{% static 'imgs/creators/arrow.png' %}" />
 					</div>
-				</div>
-				<div class="creator_preview_buttons">
-					<div class="preview_back_btn">
-						<div>
-							<h2>Go Back</h2>
+				</div>	
+				<div class="preview_next_btn">
+					<div>
+							<h2>Go to Caley's Portfolio</h2>
 							<img src="{% static 'imgs/creators/arrow.png' %}" />
-						</div>
-					</div>	
-					<div class="preview_next_btn">
-						<div>
-								<h2>Go to Caley's Portfolio</h2>
-								<img src="{% static 'imgs/creators/arrow.png' %}" />
-						</div>
-						
 					</div>
 				</div>
 			</div>
 		</div>
-		</div>
-        {% endblock %}
-    </div>
-</body>
-<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-<script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-{% block scripts %}
+	</div>
+</div>
 {% endblock %}
-<!-- <script>feather.replace();</script> -->
+
+{% block scripts %}
 <script>
 	var options = {
 		imgSrc : "{% static 'imgs/design.jpg' %}",
@@ -159,4 +132,4 @@
 		document.read
 	  // ImageGrid(options);
 </script>
-</html>
+{% endblock %}
