Prepping styling for release

--- a/creators/templates/sections/creators_index.html
+++ b/creators/templates/sections/creators_index.html
@@ -15,23 +15,23 @@
 			</div>
 			<div class="creator_preview_proj_title">
 				<div>
-						<h2>The Water Project</h2>
-						<p>The project shown is from my graduate thesis on  re-designing water and how water is actually wet.</p>
+					<h2>The Water Project</h2>
+					<p>The project shown is from my graduate thesis on re-designing water and how water is actually wet.</p>
 				</div>
 			</div>
 			<div class="creator_preview_buttons">
-				<div class="preview_back_btn">
+				<a class="preview_back_btn" href="google.com">
 					<div>
 						<h2>Go Back</h2>
 						<img src="{% static 'imgs/creators/arrow.png' %}" />
 					</div>
-				</div>	
-				<div class="preview_next_btn">
+				</a>	
+				<a class="preview_next_btn" href="google.com">
 					<div>
 							<h2>Go to Caley's Portfolio</h2>
 							<img src="{% static 'imgs/creators/arrow.png' %}" />
 					</div>
-				</div>
+				</a>
 			</div>
 		</div>
 	</div>
