--- a/creators/templates/components/creators_base.html
+++ b/creators/templates/components/creators_base.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/creators.css' %}">
     {% block resources %}
     {% endblock %}
 </head>
@@ -25,6 +25,8 @@
 		{% block content %}
         {% endblock %}
     </div>
+    {% block full-width-content %}
+    {% endblock %}
 </body>
 <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
