--- a/creators/templates/sections/creators_index.html
+++ b/creators/templates/sections/creators_index.html
@@ -1,135 +1,181 @@
-{% extends "components/creators_base.html" %}
-{% load static %}
+<!doctype html>
 
-{% block resources %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-{% endblock %}
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src = "script.js"> </script>
 
-{% block content %}
-<div class="creators-content">
-	<div class="flex">
-		<div class="placeholder"></div>
-		<div class="creators_preview">
-			<div class="creator_preview_name">
-				<h1>Caley Drooff</h1>
-			</div>
-			<div class="creator_preview_proj_title">
-				<div>
-					<h2>The Water Project</h2>
-					<p>The project shown is from my graduate thesis on re-designing water and how water is actually wet.</p>
-				</div>
-			</div>
-			<div class="creator_preview_buttons">
-				<a class="preview_back_btn" href="google.com">
-					<div>
-						<h2>Go Back</h2>
-						<img src="{% static 'imgs/creators/arrow.png' %}" />
-					</div>
-				</a>	
-				<a class="preview_next_btn" href="google.com">
-					<div>
-							<h2>Go to Caley's Portfolio</h2>
-							<img src="{% static 'imgs/creators/arrow.png' %}" />
-					</div>
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
-{% endblock %}
+</head>
 
-{% block scripts %}
-<script>
-	var options = {
-		imgSrc : "{% static 'imgs/design.jpg' %}",
-		containerName : "placeholder",
-		rows:3,
-		columns:3,
-		margin:2.5,
-		animTime: 0.3
-	  }
-	  
-	  function ImageGrid(defaults)
-	  {
-		
-		var gridContainer = document.getElementsByClassName('gridContainer');
-		if(gridContainer.length > 0){
-			gridContainer[0].parentNode.removeChild(gridContainer[0])
-		}
+<body>
 
-		
-		var r = defaults.rows;
-		var c = defaults.columns;
-		var margin = defaults.margin;
-		  
-		var placeholder = document.getElementsByClassName(defaults.containerName)[0];
-		var container = document.createElement('div');
-		container.className = "gridContainer";
-		placeholder.appendChild(container); 
-		  
-		var gridTile;  
-	  
-		var w = (container.offsetWidth / c) -margin;
-		var h = (container.offsetHeight / r) -margin;
-		var arr = [];
-		  
-		for (var i=0, l=r*c; i < l; i++)
-		{    
-		  gridTile = document.createElement('div');
-		  gridTile.className = "gridTile";
-		  gridTile.style.backgroundImage = "url("+defaults.imgSrc+")";
-		  
-			 
-		  arr = [(w+margin)*(i%c), (h+margin)*Math.floor(i/c), ((w+margin)*(i%c)+w-margin), (h+margin)*Math.floor(i/c), ((w+margin)*(i%c)+w-margin), ((h+margin)*Math.floor(i/c) + h-margin), (w+margin)*(i%c), ((h+margin)*Math.floor(i/c) + h-margin)];
-			  
-		 // console.log(i + " ====>>> " + arr + " ||||| " + i%c  + " |||||| " + i/c);  
-		  
-			  
-		  TweenMax.set(gridTile, {webkitClipPath:'polygon('+arr[0]+'px '+ arr[1]+'px,'+arr[2]+'px '+arr[3]+'px, '+arr[4]+'px '+ arr[5] +'px, '+arr[6]+'px '+ arr[7] +'px)', clipPath:'polygon('+arr[0]+'px '+ arr[1]+'px,'+arr[2]+'px '+arr[3]+'px, '+arr[4]+'px '+ arr[5] +'px, '+arr[6]+'px '+ arr[7] +'px)'});
-			 
-		  container.appendChild(gridTile);    
-		  
-		  fixTilePosition(gridTile, i);
-		}
-		
-		placeholder.addEventListener("mouseover", function(e){
-		  var allTiles = e.currentTarget.querySelectorAll(".gridTile");
-		  for (var t=0, le = allTiles.length; t < le; t++)
-			{
-			  TweenMax.to(allTiles[t], defaults.animTime, {css:{backgroundPosition:"0px 0px"}, ease:Power1.easeOut});
-			}
-		})
-								   
-		placeholder.addEventListener("mouseleave", function(e){
-		  var allTiles = e.currentTarget.querySelectorAll(".gridTile");
-		  for (var ti=0, len = allTiles.length; ti < len; ti++)
-			{
-			  fixTilePosition(allTiles[ti], ti, defaults.animTime);
-			}
-		})
-		
-		function fixTilePosition(tile, ind, time)
-		{
-		  if(time==null)time=0;
-		  var centr, centrCol, centrRow, offsetW, offsetH, left, top;
-		  
-		  centr = Math.floor(c * r / 2);
-		  centrCol = Math.ceil(centr/c);
-		  centrRow = Math.ceil(centr/r);
-			  
-		  offsetW = w/centrCol;
-		  offsetH = h/centrRow;
-		  
-		  left = (Math.round((ind % c - centrCol + 1) * offsetW));
-		  top = (Math.round((Math.floor(ind/c) - centrRow + 1) * offsetH));
-		  
-		  //console.log(left, top)
-		  
-		  TweenMax.to(tile, time, {css:{backgroundPosition:left+"px "+top+"px"}, ease:Power1.easeOut});
-		}
-	  }
-	  
-		document.read
-	  // ImageGrid(options);
-</script>
-{% endblock %}
+
+
+    <div class="main">
+        <div class = "header">
+            <h1 class = "creators">CREATORS OF CORNELL </h1>
+            <h3 class = "login">LOGIN</h3>
+        </div>
+
+        <div class="flex">
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Mohit Shah</h2>
+                            <h2 class = "major">Information Science '21</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+            <div class="profile">
+                <img src = "https://source.unsplash.com/random">
+                    <span class ="info">
+                        <span class = "detail">
+                            <h2 class = "name">Name</h2>
+                            <h2 class = "major">Major & Year</h2>
+                        </span>
+                    </span>
+            </div>
+
+        </div>
+    </div>
+
+
+
+</body>
+</html>
