updated fonts and added about to nav bar

--- a/static/html/components/base.html
+++ b/static/html/components/base.html
@@ -25,6 +25,9 @@
             <a class="nav__option unselectable" href="{% url 'index' %}">
                 home
             </a>
+            <a class="nav__option unselectable" href="{% url 'about' %}">
+                about
+            </a>
             <a class="nav__option unselectable" href="{% url 'teams' %}">
                 projects
             </a>
@@ -34,6 +37,7 @@
             <a class="nav__option unselectable" href="{% url 'rawexpo' %}">
                 raw expo
             </a>
+
 <!--             <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
                 joinus
             </a> -->
