--- a/static/scss/about.scss
+++ b/static/scss/about.scss
@@ -2,8 +2,6 @@
 html {
 	font-family: 'Cooper Hewitt' !important;
 	font-weight: 300 !important;
-	overflow-y: scroll;
-	overflow-x: hidden;
 }
 .nav-bar {
 	height: 100%;
@@ -66,6 +64,14 @@ ul {
 	margin: 0;
 	padding: 0;
 }
+
+.join-us__text a{
+    color: black;
+}
+.join-us__text a:hover{
+    color: #ffff00ff;
+    text-decoration: none;
+}
 .main {
 	margin: 0px 0px 0px 180px;
 }
@@ -75,7 +81,7 @@ ul {
 	flex-direction: column;
 	justify-content: center;
 	min-height: 20vh;
-	padding: 20px 60px;
+	padding: 20px 80px;
 }
 .txt-type {
 	&.txt {
@@ -165,7 +171,7 @@ ul {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	height: 50px;
+	height: 40px;
 	color: black;
     background-color: white;
 }
@@ -187,13 +193,14 @@ ul {
     display: inline-block; }
 .our-story, .join-us{
     position: relative;
-    min-height: 500px;
+    min-height: 450px;
     background-color: white;
 }
 .our-story::after, .join-us::after {
     content: ' ';
     display: block;
-    clear: both; }
+    clear: both;
+}
 
 @media (min-width: 1200px) {
 	h3 {
@@ -227,7 +234,7 @@ ul {
 }
 @media (max-width: 800px) {
 	.medium-type {
-		padding: 5px 35px;
+		padding: 5px 50px;
 	}
 	h1, h3, h4{
 		font-size: 14px;
