--- a/static/html/components/base.html
+++ b/static/html/components/base.html
@@ -37,6 +37,9 @@
             <a class="nav__option unselectable" href="{% url 'rawexpo' %}">
                 raw expo
             </a>
+            <a class="nav__option unselectable" href="{% url 'diversity_and_inclusion' %}">
+                d&i
+            </a>
 
 <!--             <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
                 joinus
